--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Mwnü kısmı başlangıç -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">PAYLAŞTIKÇA | Bilgi paylaştıkça çoğalır..</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -53,7 +53,7 @@
     <!-- Menü kısmı bitiş -->
 
     <!-- Slider başlangıç -->
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel slide mt-5">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -288,7 +288,7 @@
     <!-- İletişim bitiş -->
 
     <!-- FOOTER -->
-    <div class="container-fluid bg-dark" data-bs-theme="dark">
+    <div class="container-fluid bg-dark my-0" data-bs-theme="dark">
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#anasayfa" class="nav-link px-2 text-light">Anasayfa</a></li>
